<resources>
    <string name="app_name">Regesteration page</string>
    <string name="registoration">Registoration</string>
    <string name="write_the_your_information">write the your information</string>
    <string name="your_name">your name</string>
    <string name="write_your_email">write your Email</string>
    <string name="email">\@Email</string>
    <string name="write_your_birth_date">write your birth date</string>
    <string name="defultdate">--/--/--</string>
    <string name="password">Password:</string>
    <string name="reinter_password">ReInter Password:</string>
    <string name="gender">Gender:</string>
    <string name="femail">Femail</string>
    <string name="mail">Mail</string>
    <string name="write_your_name">Write your Name:</string>
    <string name="registor">Registor</string>
    <string name="name">Name</string>
    <string name="reinterpass">reinterPass</string>
    <string name="password1">password</string>
</resources>